Feat: Statisctic for requests
